G2T2-4 Update: Shifted my page from Roles.tsx to Home.tsx, took out all my styles for Home.tsx and RoleCourseCard.tsx from App.css and separated them into css modules to prevent style conflicts. Added queries to backend to retrieve role data and conditionally render RoleCourseCards. Added GenericModal that can have its functionality extended to cater to all 'Read More' use cases. Also added next button and pagination on my page.

--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -61,38 +61,8 @@
   padding: 3vw;
 }
 
-.border {
-  border-radius: 10px;
-}
-
-.card {
-  background-color: #FAFAFA;
-  padding: 1vw;
-  border-radius: 4px;
-}
-
-.btn-color {
-  color: white;
-  background-color: #86B0FF;
-}
-
-.shadow {
-  box-shadow: 0px 1vw 1vw rgba(0, 0, 0, 0.25);
-}
-
-.horizontal {
-  display: flex;
-}
-
-.card-row {
-  color: #3649F9;
-  font-size: 0.8vw;
-  line-height: 0.2vw;
-}
-
 #root .ant-steps-item-title {
   color: #3649F9;
-  overflow-y: auto;
 }
 
 /* may need to check for any integration problems */
